# Colosseum2026

./: .env.example  .gitignore  Makefile  README.md  docker-compose-postgres.yml  docker-compose.prod.yml  docker-compose.yml  empirical-results.json  launch.sh  launch_all.sh  quickstart.sh  rules.txt  run-all.sh  run_rules_compliance.sh  sauron.db-shm  sauron.db-wal  start.sh
.github/workflows/: audit.yml  kya-e2e.yml  redteam-e2e.yml  release-gate.yml  test.yml
KYC/: .dockerignore  adapters.py  bank_profiles.py
agentic/: package-lock.json  package.json  tsconfig.json
agentic/schemas/: ajwt-core-contract.json  strict-payment-intent.json
agentic/src/: ajwt.ts  call-sig.ts  checksum.ts  idp-client.ts  index.ts  pop-keys.ts  workflow-tracker.ts
agentic/test/: e2e.test.ts  integration-shim.test.ts
anomaly-engine/: Dockerfile  engine.py  requirements.txt  server.py  test_rule10.py
anomaly-engine/models/: autoencoder.py  isolation_forest.py
archive/banking-2025/contracts/sauron_ledger/programs/sauron_ledger/: Cargo.toml
archive/banking-2025/contracts/sauron_ledger/programs/sauron_ledger/src/: lib.rs
branding/: BRANDING.md
clients/python/: pyproject.toml
clients/python/sauronid_client/: README.md  __init__.py  adapters.py  agent.py  client.py
clients/python/tests/: test_e2e_live.py
contracts/revocation/: Dockerfile  hardhat.config.ts  package-lock.json  package.json
core/: .dockerignore  Cargo.toml  Dockerfile  deny.toml  sauron.db  sauron.db-shm  sauron.db-wal  seed.sh  test_workflow.sh
core/src/: admin.rs  agent.rs  agent_action.rs  agent_action_anchor.rs  agent_checksum.rs  ajwt_support.rs  attestation.rs  bitcoin_anchor.rs  compliance.rs  compliance_screening.rs  db.rs  error.rs  feature_flags.rs  identity.rs  issuer_runtime.rs  lib.rs  lightning.rs  main.rs  merkle.rs  oprf.rs  payment_smt.rs  policy.rs  repository.rs  ring.rs  risk.rs  routes.rs  runtime_mode.rs  secret_provider.rs  sites.rs  solana_anchor.rs  solana_service.rs  state.rs
core/tests/: e2e_agent_matrix.sh  e2e_agent_payment_authorize.sh  e2e_ajwt_jti_replay.sh  e2e_kya_autonomous.sh  e2e_kya_delegated.sh  e2e_legacy_nonbank_migration.sh  e2e_ring_restore_consent.sh  generate_zkp_fixtures.js  hf_fetch_and_matrix_test.sh  postgres_backend_drift.sh  run_confidence_suite.sh  smoke_dev_leash_demo.sh
core/tests/fixtures/: zkp_fixtures.json
core/tests/lib/: agent_action.sh  zkp_fixture.sh
dashboard/: .env.local.example  next.config.ts  package.json
dashboard/__tests__/: api.test.ts  format.test.ts
dashboard/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
data/: README.md  behavior.csv  build_all.py  companies.csv  company_trends.csv  config.py  convert_stats_to_usd.py  expenses.csv  gender.csv  generate_behavior.py  generate_companies.py  generate_expenses.py  generate_personas.py  generate_transactions.py  personas.csv  seed_sauron.py  stats.csv  users.csv
deploy/: docker-compose-postgres.yml  docker-compose.prod.yml  docker-compose.yml
docs/: active-route-map.md  competitive-benchmark.md  empirical-comparison.md  operations.md  production-readiness.md  roadmap.md  solana-free-paths.md  threat-model.md
kya-redteam/: empirical-results.json  package-lock.json  package.json
legacy/: README.md
partner-portal/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json
redteam/: package-lock.json  package.json  tavily-redteam-results.json  tsconfig.json
sauron-dashboard/: Dockerfile  eslint.config.mjs  package-lock.json  package.json
scripts/: simulate_agents.py  simulate_real_actions.py  solana_audit.py  solana_devnet_setup.py
subgraph/: schema.graphql  subgraph.yaml
zkp/: package-lock.json  package.json
(+250 files in other folders)
