[package]
name = "sauron-core"
version = "0.1.0"
edition = "2021"
default-run = "sauron-core"

[dependencies]
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core", "serde"] }
sha2 = "0.10"
rand = "0.8"
argon2 = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
hex = "0.4.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
prometheus = { version = "0.13", default-features = false }
once_cell = "1.19"
bs58 = "0.5"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros"] }
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
rs_merkle = "1.4"
hmac = "0.12"
subtle = "2.6"
jsonwebtoken = "9.3"
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
