[project]
name = "sauronid-client"
version = "0.1.0"
description = "SauronID Python client + LangChain/OpenAI/Anthropic adapters for AI-agent binding."
readme = "sauronid_client/README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "SauronID maintainers" }]
keywords = ["ai-agent", "auth", "binding", "dpop", "anthropic", "openai", "langchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "requests>=2.31",
    "cryptography>=42.0",
]

[project.urls]
"Homepage" = "https://github.com/your-org/sauronid"
"Documentation" = "https://github.com/your-org/sauronid/blob/main/docs/empirical-comparison.md"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sauronid_client*"]
