[package]
name = "sauron-ledger"
version = "0.1.0"
description = "Sauron Merkle Root Ledger — Solana Anchor Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sauron_ledger"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"
